video added but need to make responsive brand section added nav tool is commited and slider text is edited

--- a/css/main.css
+++ b/css/main.css
@@ -2812,3 +2812,61 @@ h2.title {
 	border-color: #ddd #ddd #ddd transparent;
 	*border-left-color: #ffffff;
 }
+
+
+.header-container{
+  width: 100%;
+  height: 900px;
+  border-left: none;
+  border-right: none;
+  position: relative;padding: 20px;
+}
+
+#video-section{
+  /* background: url("../images/pic03.jpg") fixed no-repeat; */
+  background: linear-gradient(to right , rgba(165, 163, 167,0.7),  rgba(152, 135, 168,0.7));
+  margin: 10px 0px 10px 0px;
+}
+
+.video-container{
+  position: absolute;
+  top: 14%;
+  left: 0%;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+video{
+  position: absolute;
+  /* width: 100%; */
+  margin: 0 auto;
+  /* margin-top: 5em; */
+  /* height: 600px;; */
+  /* border-radius: 106px; */
+}
+
+/* Clothes Brands */
+
+.cloth-brands{
+  background: linear-gradient(to right , rgb(236, 236, 236), rgb(197, 193, 197) )
+}
+
+.cloth-brand-align{
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.img-thumbnail:hover{
+  transform: scale(1.08);
+  transition: 2s;
+}
+
+@media (max-width:500px) {
+  .img-thumbnail{
+    align-items: center;
+    margin-left: 60px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+}
